<resources>
    <string name="first_intro">Visualization of the Olympiad algorithms</string>
    <string name="app_name">VisuAlgOl</string>
    <string name="about">Welcome to VisuAlgOl! This application was created to learn olympiad algorithms in informatics with the support of the HSE Lyceum. To continue, click the button below.</string>
    <string name="go_next">Go</string>
    <string name="choose">Choose an algorithm</string>

    <string name="sorting">Sorting algorithms</string>
    <string name="sort">Sort</string>
    <string name="sort_intro">Sorting</string>
    <string name="stupid_sort">Stupid sort</string>
    <string name="bubble_sort">Bubble sort</string>
    <string name="selection_sort">Selection sort</string>
    <string name="insertion_sort">Insertion sort</string>
    <string name="merge_sort">Merge sort</string>
    <string name="quick_sort">Quick sort</string>
    <string name="counting_sort">Counting sort</string>
    <string name="radix_sort">Radix sort</string>

    <string name="search">Search algorithms</string>
    <string name="lin_search">Linear search</string>
    <string name="bin_search">Binary search</string>
    <string name="ter_search">Ternary search</string>

    <string name="recursion">Recursion</string>

    <string name="graphs">Graphs</string>
    <string name="dfs">DFS</string>
    <string name="bfs">BFS</string>

    <string name="strings">Strings</string>
    <string name="prefix">Prefix-function</string>
    <string name="z">Z-function</string>

    <string name="data_structures">Data structures</string>
    <string name="st">Segment Tree</string>
    <string name="bst">BST</string>

    <string name="what">What is it and what is it for?</string>

    <string name="whatIsSort">What is sorting?</string>
    <string name="sort_introduction">Sorting is ordering: arranging items in a sequence ordered by some criterion. For example, people at school in pe lessons and in the army are lined up by height, because the order is needed.</string>
    <string name="soldiers">Soldiers lined up in a row</string>
    <string name="sort_stupid">....</string>

    <string name="sort_bub">Bubble sort, sometimes referred to as sinking sort, is a simple sorting algorithm that repeatedly steps through the list to be sorted, compares each pair of adjacent items and swaps them if they are in the wrong order. The pass through the list is repeated until no swaps are needed, which indicates that the list is sorted.</string>

    <string name="sort_sel">.....................</string>

    <string name="sort_ins">.....................</string>

    <string name="sort_mer">.....................</string>

    <string name="sort_q">.....................</string>

    <string name="sort_cou">.....................</string>

    <string name="lin_s">.....................</string>

    <string name="bin_s">.....................</string>

    <string name="dfs_">.....................</string>

    <string name="bfs_">.....................</string>

    <string name="prefix_fun">.....................</string>

    <string name="z_fun">.....................</string>

    <string name="s_t">.....................</string>

    <string name="b_s_t">.....................</string>

    <string name="basic_sort2">.....................</string>
    <string name="generate">Generate</string>
    <string name="run">Run</string>
    <string name="nothingToShow">.....................</string>
    <string name="one">1</string>
    <string name="symbol">a</string>
    <string name="answer">Answer:</string>
    <string name="check">Check</string>
    <string name="task">Task</string>
    <string name="sec">1.25 sec</string>
    <string name="construction">Construction</string>
    <string name="sum">Sum</string>
    <string name="insertion">Insertion</string>
    <string name="deletion">Deletion</string>

    <string name="task1">Sort the following array of numbers in ascending order: 2 1 3</string>
    <string name="task2">.....................</string>
    <string name="task3">.....................</string>
    <string name="task4">.....................</string>
    <string name="task5">.....................</string>
    <string name="task6">.....................</string>
    <string name="task7">.....................</string>
    <string name="task8">.....................</string>
    <string name="task9">.....................</string>
    <string name="task10">.....................</string>
    <string name="task11">.....................</string>
    <string name="task12">.....................</string>
    <string name="task13">.....................</string>
</resources>