<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickSort">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/quick_sort"
                android:textColor="?android:attr/colorForeground"
                android:textSize="21sp"
                app:fontFamily="@font/rubik_italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_num1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_num8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_gray"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ind1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ind8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangle_white"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/TvDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sec"
                android:textSize="19sp" />

            <SeekBar
                android:id="@+id/SbDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:max="4000"
                android:progress="1250" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q_sort"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1.40"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/generate"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1.75"
                    android:background="@drawable/button_shape"
                    android:gravity="center"
                    android:text="@string/generate"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/SortQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/sort_q"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/task"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/task6"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:hint="@string/answer"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSave"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/check"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>